added img to html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <title>Flukeout</title>
 </head>
 <body>
+    <h1>CSS Dinner</h1>
+    <div>
+        <img src="img/flukeout.jpg">
+    </div>
 </body>
 </html>
