--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>CSS Dinner</h1>
+    <h1>CSS Dinner Excercise</h1>
     <div>
         <img src="img/flukeout.jpg">
     </div>
